# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import usersRouter from "./users";
 import suppliersRouter from "./suppliers";
 import productsRouter from "./products";
 import purchaseOrdersRouter from "./purchase_orders";
+import supplierProductsRouter from "./supplier_products";
 import customersRouter from "./customers";
 import salesRouter from "./sales";
 import tasksRouter from "./tasks";
@@ -22,6 +23,7 @@ router.use("/users", usersRouter);
 router.use("/suppliers", suppliersRouter);
 router.use("/products", productsRouter);
 router.use("/purchase-orders", purchaseOrdersRouter);
+router.use("/supplier-products", supplierProductsRouter);
 router.use("/customers", customersRouter);
 router.use("/sales", salesRouter);
 router.use("/tasks", tasksRouter);
